--- a/latihan6.html
+++ b/latihan6.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en" type="text">
     <title>JO1's Profile</title>
-    <link rel="icon" type="image/x-icon" href="/images/jo1.ico">
+    <link rel="icon" type="image/x-icon" href="/latihan6_files/jo1.ico">
     <head>
         <link rel="stylesheet"
         href="latihan6.css">
@@ -11,7 +11,7 @@
         <h1>JO1's Profile</h1>
     </header>
     <br>
-    <img id="jo1-image" src="/images/jo1.jpg">
+    <img id="jo1-image" src="/latihan6_files/jo1.jpg">
 
     <div class="outline">
         <h2>JO1</h2>
